--- a/app/globals.css
+++ b/app/globals.css
@@ -1,42 +1,62 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@import "tailwindcss";
+
+h1 {
+  font-family: var(--font-zilla-slab);
+  font-size: 55.2px;
+  line-height: 115.2px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #5C1C75;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
+h2 {
+  font-family: var(--font-inter);
+  font-size: 26px;
+  line-height: 58.09px;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #5C1C75;
   margin: 0;
 }
 
+p {
+  font-family: var(--font-nunito-sans);
+  font-size: 19px;
+  width: 80%;
+  line-height: 49.1px;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #000000C7;
+  margin: 0;
+}
+
+li {
+  font-family: var(--font-nunito-sans);
+  font-size: 18px;
+  width: 80%;
+  font-weight: 500;
+  line-height: 49.1px;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #000000C7;
+  margin: 0;
+
+}
+
 a {
-  color: inherit;
+  font-size: 19px;
+  width: 80%;
+  font-weight: 500;
+  line-height: 49.1px;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: #000000C7;
+  margin: 0;
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+hr {
+  border-color: #d0abdfaf;
+  width: 100%;
 }
