--- a/app/(pages)/profile/page.module.css
+++ b/app/(pages)/profile/page.module.css
@@ -17,11 +17,13 @@
 }
 
 .left_section {
+  display: flex;
+  flex-direction: column;
   margin-top: 1.5rem;
   width: 100%;
   max-width: 620px;
   max-height: 682px;
-  background-color: aliceblue;
+  margin-left: 10rem;
 }
 
 .label {
@@ -29,35 +31,62 @@
   font-size: 1.875rem;
   line-height: 2.25rem;
   font-weight: 700;
-  margin-bottom: 1.75rem;
+  margin-bottom: 2rem;
 }
 
 .input {
   padding: 1.2rem 1rem;
   border-radius: 0.375rem;
   border-width: 2px;
-  border-color: #5c1c75;
+  border-color: rgba(191, 134, 216, 1);
+  color: rgba(0, 0, 0, 0.7);
   width: 100%;
 
   font-weight: 400;
   font-size: 30px;
   line-height: 88%;
   letter-spacing: 0%;
-  margin-bottom: 1.75rem;
+  margin-bottom: 2rem;
 }
 
 .right_section {
-  margin-top: 1.5rem;
+  display: flex;
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+  margin-top: 2.5rem;
+  flex-direction: column;
   width: 100%;
-  max-width: 688px;
-  max-height: 682px;
+  max-width: 42rem;
   text-align: center;
-  background-color: azure;
 }
 
 .requirements_title {
-  font-size: 100px;
+  font-size: 96px;
   line-height: 130px;
   font-weight: bold;
   text-align: center;
+  margin-bottom: 3rem;
+}
+
+.requirements_p {
+  font-family: Nunito Sans;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-align: center;
+}
+
+.image_container {
+  position: relative;
+  width: 100%;
+  max-width: 34rem;
+}
+
+.requirement_text_container {
+  display: flex;
+  margin-top: 3rem;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 42rem;
 }
