--- a/app/page.module.css
+++ b/app/page.module.css
@@ -13,8 +13,9 @@ Home.main {
 }
 
 Home.h1 {
-    font-size: 3rem;
+    font-size: 96px;
     margin-bottom: 10px;
+    font-weight: 700px;
 }
 
 Home.p {
