--- a/app/components/header.module.css
+++ b/app/components/header.module.css
@@ -1,5 +1,5 @@
 .topnav {
-      position: fixed;
+      /* position: fixed; */
       background-color: white;
       overflow: hidden;
       left: 0;
