Modularized ProjectCard component, commented out specific styles from globals.css

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,16 +1,15 @@
 @import "tailwindcss";
 
-h1 {
+/* h1 {
   font-family: var(--font-zilla-slab);
-  font-size: 55.2px;
-  line-height: 115.2px;
+  font-size: 5rem;
   text-align: left;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
   color: #5C1C75;
-}
+} */
 
-h2 {
+/* h2 {
   font-family: var(--font-inter);
   font-size: 26px;
   line-height: 58.09px;
@@ -18,17 +17,16 @@ h2 {
   text-decoration-skip-ink: none;
   color: #5C1C75;
   margin: 0;
-}
+} */
 
 p {
   font-family: var(--font-nunito-sans);
-  font-size: 19px;
-  width: 80%;
-  line-height: 49.1px;
+  /* font-size: 1.62rem; */
+  /* width: 80%; */
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
   color: #000000C7;
-  margin: 0;
+  /* margin: 0; */
 }
 
 li {
@@ -45,8 +43,8 @@ li {
 }
 
 a {
-  font-size: 19px;
-  width: 80%;
+  /* font-size: 19px; */
+  /* width: 80%; */
   font-weight: 500;
   line-height: 49.1px;
   text-underline-position: from-font;
@@ -56,7 +54,7 @@ a {
   text-decoration: none;
 }
 
-hr {
+/* hr {
   border-color: #d0abdfaf;
   width: 100%;
-}
+} */
