--- a/app/components/BackgroundGradient/BackgroundGradient.module.css
+++ b/app/components/BackgroundGradient/BackgroundGradient.module.css
@@ -1,13 +1,11 @@
-.gradient {
-  border-radius: 50%;
-  z-index: -1;
-  /* position: relative; */
-  /* filter: blur(7rem); */
-  filter: blur(4rem);
-  border-radius: 50%;
+.gradientContainer {
+  display: flex;
   z-index: -1;
 }
 
-.gradientContainer {
-  display: flex;
+.gradient {
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  filter: blur(6rem);
 }
